# ADLXCli

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  version.h.in
include/: GpuState.hpp  toast.hpp
src/: main.cpp  toast.cpp
